Styles and optimize.

--- a/public/stylesheets/sign.css
+++ b/public/stylesheets/sign.css
@@ -6,13 +6,12 @@ body {
 body {
   font-size: 16px;
   text-align: center;
-  display: flex;
-  align-items: center;
   background-color: #f5f5f5;
 }
 
 .form-signin {
   max-width: 330px;
+  margin-top: 16vmin !important;
   padding: 15px;
 }
 
