--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -12,102 +12,7 @@
 <title>{{ title }}</title>
 {{/block}}
 
-<section class="header">
-<nav
-  {{if pathname.indexOf('/topicDetail/') === 0}}
-    class="navbar navbar-expand-lg"
-    data-bs-theme="light"
-  {{else}}
-    class="navbar navbar-dark navbar-expand-lg bg-dark"
-    data-bs-theme="dark"
-  {{/if}}
->
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">
-      <img src="/images/nodejs.ico" alt="Logo" title="Node.js" width="32" height="32">
-      CONDUIT
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a
-            href="/"
-            {{if (pathname === '/' || pathname.indexOf('/topic') === 0)}}
-              class="nav-link active"
-            {{else}}
-              class="nav-link"
-            {{/if}}
-          >Homepage</a>
-        </li>
-        {{if user}}
-        <li class="nav-item">
-          <a
-            href="/profile"
-            {{if (pathname === '/profile')}}
-              class="nav-link active"
-            {{else}}
-              class="nav-link"
-            {{/if}}
-          >Profile</a>
-        </li>
-        <li class="nav-item">
-          <a
-            href="/myTopics"
-            {{if (pathname === '/myTopics')}}
-              class="nav-link active"
-            {{else}}
-              class="nav-link"
-            {{/if}}
-          >My Topics</a>
-        </li>
-        {{/if}}
-      </ul>
-      <div class="d-flex login">
-        {{if !user}}
-          {{if pathname.indexOf('/topicDetail/') === 0}}
-            <a href="/login" class="btn btn-outline-dark">Login</a>
-            <a href="/register" class="btn btn-dark">Register</a>
-          {{else}}
-            <a href="/login" class="btn btn-outline-light">Login</a>
-            <a href="/register" class="btn btn-light">Register</a>
-          {{/if}}
-        {{else}}
-        <form action="/logout" method="post">
-          <div class="dropdown">
-            <a class="btn btn-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <img
-                alt="Avatar"
-                class="avatar"
-                src="{{ user.avatar }}"
-                title="{{ user.nickname }}"
-                width="20"
-                height="20"
-              >{{ user.nickname }}
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item mb-1" href="/profile">Profile</a></li>
-              <li><a class="dropdown-item mb-1" href="/myTopics">My Topics</a></li>
-              <li><a class="dropdown-item mb-1" href="/topic/post">New Topic</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li>
-                <a class="dropdown-item" href="">
-                  <button class="btn btn-link" type="submit">Logout</button>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </form>
-        {{/if}}
-      </div>
-    </div>
-  </div>
-</nav>
-{{block 'header'}}
-{{/block}}
-</section>
+{{include 'header.html'}}
 
 <section class="content">
 {{block 'content'}}
