--- a/src/views/post.html
+++ b/src/views/post.html
@@ -2,6 +2,12 @@
 
 {{block 'head'}}
 <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/vditor/3.9.2/index.min.css">
+<style type="text/css">
+.vditor-reset {
+  color: #212529;
+  font-family: mononoki, Monaco, Consolas, 'Lucida Grande', Helvetica, Arial, sans-serif;
+}
+</style>
 {{/block}}
 
 {{block 'content'}}
