--- a/src/views/tabs.html
+++ b/src/views/tabs.html
@@ -26,5 +26,12 @@
       {{/if}}
     >My Topics</a>
   </li>
+  {{else}}
+  <li class="nav-item">
+    <a
+      href="/login"
+      class="nav-link"
+    >Sign in to see your own topics</a>
+  </li>
   {{/if}}
 </ul>
