--- a/src/views/register.html
+++ b/src/views/register.html
@@ -1,3 +1,4 @@
+<html lang="en">
 {{block 'head'}}
 <link
   rel="stylesheet"
@@ -8,12 +9,17 @@
 <link rel="shortcut icon" href="/images/typescript.svg" type="image/x-icon" />
 {{/block}}
 
+{{block 'title'}}
+<title>{{ title }}</title>
+{{/block}}
+
+{{include 'header.html'}}
+
 {{block 'content'}}
 <main class="form-signin w-100 m-auto">
   <form action="/register" method="post">
-    <img class="mb-4" src="/images/typescript.svg" alt="" width="72" height="57" />
-    <!-- <img class="mb-4" src="/images/vite.svg" alt="" width="72" height="57" /> -->
-    <h1 class="h3 mb-3 fw-normal">{{ title }}</h1>
+    <img class="mb-4" src="/images/nodejs.ico" alt="Logo" title="Node.js" height="57" />
+    <!-- <h1 class="h3 mb-3 fw-normal">{{ title }}</h1> -->
 
     <div class="form-floating">
       <input
@@ -48,8 +54,8 @@
       <label for="password">Password</label>
     </div>
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
-    <p class="mt-4 mb-3">Already have an account? <a href="/login">Sign in</a>.</p>
+    <button class="w-100 btn btn-lg btn-dark" type="submit">Sign Up</button>
+    <p class="mt-4 mb-3">Already have an account? <a href="/login">Sign In</a>.</p>
   </form>
 </main>
 {{/block}}
@@ -57,3 +63,4 @@
 {{block 'footer'}}
 <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.min.js"></script>
 {{/block}}
+</html>
