--- a/src/views/login.html
+++ b/src/views/login.html
@@ -6,11 +6,11 @@
 />
 <link rel="stylesheet" href="/stylesheets/style.css" />
 <link rel="stylesheet" href="/stylesheets/sign.css" />
-<link rel="shortcut icon" href="/images/typescript.svg" type="image/x-icon" />
+<link rel="shortcut icon" href="/images/nodejs.ico" type="image/x-icon" />
 {{/block}}
 
 {{block 'title'}}
-<title>{{ title }}</title>
+<title>{{ title }} · CONDUIT</title>
 {{/block}}
 
 {{include 'header.html'}}
