--- a/src/views/tabs.html
+++ b/src/views/tabs.html
@@ -1,6 +1,6 @@
 {{if user}}
 <div class="text-end">
-  <a href="/topic/post" class="btn btn-dark">New Topic</a>
+  <a href="/topic/initiate" class="btn btn-dark">New Topic</a>
 </div>
 {{/if}}
 
