--- a/src/views/tabs.html
+++ b/src/views/tabs.html
@@ -28,13 +28,13 @@
   </li>
   <li class="nav-item">
     <a
-      href="/myFavorite"
-      {{if pathname === '/myFavorite'}}
+      href="/myFavorites"
+      {{if pathname === '/myFavorites'}}
         class="nav-link active"
       {{else}}
         class="nav-link"
       {{/if}}
-    >MyFavorite</a>
+    >MyFavorites</a>
   </li>
   {{else}}
   <li class="nav-item">
