--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -263,39 +263,39 @@ a:active,
   margin-bottom: 6px;
 }
 
-.profile,
+.settings,
 .newTopic {
   max-width: 960px;
   margin: 0 auto;
 }
 
-.profile h2,
-.profile h4,
+.settings h2,
+.settings h4,
 .newTopic h2,
 .newTopic h4 {
   text-align: center;
 }
 
-.profile .avatar,
+.settings .avatar,
 .newTopic .avatar {
   border-radius: 6px;
 }
 
-.profile .form-label,
+.settings .form-label,
 .newTopic .form-label {
   font-size: 18px;
 }
 
-.profile .form-select > option {
+.settings .form-select > option {
   font-size: 18px !important;
 }
 
-.profile .form-radio-control {
+.settings .form-radio-control {
   border-color: transparent;
   padding-left: 0;
 }
 
-.profile .form-radio-control .form-check-label {
+.settings .form-radio-control .form-check-label {
   cursor: pointer;
 }
 
@@ -398,4 +398,26 @@ a:active,
 .commentOwner small {
   opacity: .75;
   margin-left: 10px;
+}
+
+.flatpickr-day.selected,
+.flatpickr-day.startRange,
+.flatpickr-day.endRange,
+.flatpickr-day.selected.inRange,
+.flatpickr-day.startRange.inRange,
+.flatpickr-day.endRange.inRange,
+.flatpickr-day.selected:focus,
+.flatpickr-day.startRange:focus,
+.flatpickr-day.endRange:focus,
+.flatpickr-day.selected:hover,
+.flatpickr-day.startRange:hover,
+.flatpickr-day.endRange:hover,
+.flatpickr-day.selected.prevMonthDay,
+.flatpickr-day.startRange.prevMonthDay,
+.flatpickr-day.endRange.prevMonthDay,
+.flatpickr-day.selected.nextMonthDay,
+.flatpickr-day.startRange.nextMonthDay,
+.flatpickr-day.endRange.nextMonthDay {
+  border-color: #5cb85c !important;
+  background-color: #5cb85c !important;
 }
